# bes_flow_nn

./: .gitignore  LICENSE  README.md  pyproject.toml
bes_flow/: 133298_tf.csv  __init__.py  bes_filter.py  compare_jhopkins.py  compare_methods.py  config.py  dataset.py  evaluate.py  evaluate_gkeyll.py  generate_mixed_dataset.py  loss.py  metrics.py  model.py  model_pwcnet.py  model_s.py  odp.py  plot_loss_history.py  predict.py  prepare_jhopkins_dataset.py  tok_loader.py  train.py  train_jhopkins.py
